--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Holds APIs and connects to MongoDB Atlas collection.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Midhun Satheesan",
   "license": "ISC",
@@ -12,6 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
